--- a/app/src/main/res/layout/activity_inventories_on_map.xml
+++ b/app/src/main/res/layout/activity_inventories_on_map.xml
@@ -6,4 +6,14 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InventoryMapActivity" />
+    tools:context=".InventoriesOnMapActivity">
+
+    <Button
+        android:id="@+id/set_inventory_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:onClick="seeListOnClick"
+        android:text="See list" />
+
+</fragment>
