QR Code scanning functionality implemented.

--- a/app/src/main/res/layout/activity_qrcode_scanner.xml
+++ b/app/src/main/res/layout/activity_qrcode_scanner.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Scanning result."/>
+        android:text="Scanning result will be displayed here."/>
 
     <Button
         android:layout_width="wrap_content"
@@ -21,5 +21,14 @@
         android:layout_marginTop="50dp"
         android:onClick="scanQRCodeOnClick"
         android:text="scan" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:visibility="gone"
+        android:onClick="rateOnClick"
+        android:text="rate" />
 
 </LinearLayout>
