--- a/app/src/main/res/layout/inventory_view.xml
+++ b/app/src/main/res/layout/inventory_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,7 +12,7 @@
         <ImageView
             android:id="@+id/inventory_owner_photo"
             android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_height="155dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:src="@drawable/ic_launcher_foreground" />
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -28,42 +29,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/show_owner_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/show_owner_capacity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/show_owner_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/show_owner_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/show_owner_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="XYZ"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
 
         </LinearLayout>
@@ -76,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:text="BOOK" />
 
