--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colorPrimary"
+    android:background="@android:color/white"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -60,6 +60,14 @@
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Login" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/link_signup"
