--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -3,7 +3,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:weightSum="4">
 
